[package]
name = "rustdoku-js"
version = "0.1.0"
authors = ["Ryan Levick <ryan.levick@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sudoku = { path = "../..", version = "0.1" }
wasm-bindgen = "0.2.40"
web-sys = { version = "0.3.17", features = ["console", "Performance", "Window"] }